--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "docxtemplater": "^3.49.1",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.419.0",
+    "mammoth": "^1.8.0",
+    "multer": "^1.4.5-lts.1",
+    "next": "14.2.5",
+    "pdf-parse": "^1.1.1",
+    "pizzip": "^3.1.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.14.13",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
