--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "docxtemplater": "^3.49.1",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.419.0",
     "mammoth": "^1.8.0",
     "multer": "^1.4.5-lts.1",
@@ -25,7 +27,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-qr-code": "^2.0.15",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
