--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.25.0",
     "@google/generative-ai": "^0.16.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
     "mammoth": "^1.8.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "pdf-parse": "^1.1.1",
     "pizzip": "^3.1.7",
     "react": "^18",
