--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint",
     "docker:deploy-prod": "docker-compose up -d",
     "docker:deploy-staging": "docker-compose -f docker-compose.staging.yml up -d",
-    "docker:build-prod": "docker buildx build --push -t ianfrye/resource-apps-frontend:latest .",
+    "docker:build-prod": "docker buildx build --push --platform linux/amd64,linux/arm64 -t ianfrye/resource-apps-frontend:latest .",
     "docker:push-prod": "docker push ianfrye/resource-apps-frontend:latest",
     "docker:build-staging": "docker buildx build --push -t ianfrye/resource-apps-frontend:staging .",
     "docker:push-staging": "docker push ianfrye/resource-apps-frontend:staging"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.25.0",
-    "@google/generative-ai": "^0.16.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -25,18 +23,10 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cookies-next": "^4.2.1",
-    "docxtemplater": "^3.49.1",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.419.0",
-    "mammoth": "^1.8.0",
-    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
-    "openai": "^4.54.0",
-    "pdf-parse": "^1.1.1",
-    "pizzip": "^3.1.7",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -50,10 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.14.13",
-    "@types/pdf-parse": "^1.1.4",
+    "@types/node": "^22.1.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
